--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -21,6 +21,22 @@ $contact-head-bg: rgba(247, 162, 109,1);
   margin: 0;
 }
 
+li:hover {
+  background: #e7e7e7;
+}
+
+.uk-nav li:hover {
+  background: #0c7bbd;
+
+  a {
+    color: #fff;
+  }
+}
+
+.uk-nav li {
+  padding: 10px 15px;
+}
+
 body, html {
   font-family: "Raleway", sans-serif;
   background: $body-bg-color;
@@ -44,12 +60,12 @@ body, html {
   }
 
   .uk-navbar-nav>li:hover>a, .uk-navbar-nav>li>a.uk-open, .uk-navbar-nav>li>a:focus {
-    color: $navbar-text-hover-color;
+    color: #008e00;
   }
 }
 
 .uk-navbar-dropdown {
-  padding: 15px;
+  padding: 0;
   background: #fff;
   margin-top: 65px !important;
 }
@@ -63,22 +79,22 @@ body, html {
 
 #sushi {
   background: $sushi-bg-color;
-  padding-top: 55px;
-  padding-bottom: 55px;
+  padding-top: 27.5px;
+  padding-bottom: 27.5px;
   scroll-margin-top: 80px;
 }
 
 #wrapsandsoup {
   background: $wrapsandsoup-bg-color;
-  padding-top: 55px;
-  padding-bottom: 55px;
+  padding-top: 27.5px;
+  padding-bottom: 27.5px;
   scroll-margin-top: 80px;
 }
 
 #contact {
   background: $contact-bg-color;
-  padding-top: 55px;
-  padding-bottom: 55px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   scroll-margin-top: 80px;
 }
 
@@ -157,7 +173,7 @@ body, html {
   border-radius: 5px;
   color: #fff;
   text-shadow: 1px 1px 1px rgba(0,0,0,.2);
-  font-size: 20px;
+  font-size: 30px;
   border: 1px solid #dddddd;
   margin-bottom: 25px;
 }
@@ -173,6 +189,7 @@ body, html {
 
   img {
     border-radius: 5px;
+    height: 335px;
   }
 
   .uk-table th {
@@ -180,12 +197,17 @@ body, html {
     color: #fff;
     font-size: 16px;
     text-transform: none;
+    padding: 10px 5px;
   }
 }
 
 .other-time {
   margin-top: -10px;
   margin-left: 10px;
+}
+
+.uk-table td {
+  padding: 5px;
 }
 
 #footer {
